    - debian/patches/02_libtool.patch: Likewise.
    - debian/patches/03_gcc-4.0.patch: Likewise.
    - debian/patches/04_no_pcibios_init.patch: Removed.
  * Added Brazilian Portuguese debconf translation. (Closes: #301734)
    Thanks to Rodrigo Tadeu Claro <rlinux@cipsga.org.br>.
  * Added Vietnamese debconf translation. (Closes: #313170)
    Thanks to Clytie Siddall <clytie@riverland.net.au>.
  * Provide a symlinked manpage for bochs-bin.
  * Add a man page for sb16ctrl.
  * Explicitly state architectures and stop using type-handling.
  * Add libaa1-dev as an alternative Build-Dependency to aalib1-dev.
  * Do not use a stamp file for configure.
  * Add Debian Subversion repository URL.
  * Update copyright year.
  * Update watch file version to 3 (no changes needed).
  * Now using Standards-Version 3.6.2 (no changes needed).
  * Use new QA SourceForge watch redirector.
  * Use new dpkg-architecture variables for os and cpu.
  * C++ ABI transition.
    - Remove special case for m68k to use g++-3.4.

 -- Guillem Jover <guillem@debian.org>  Wed, 30 Mar 2005 01:46:23 +0300

bochs (2.1.1+20041109-3) unstable; urgency=high

  * Remove rombios pcibios initialization code. It lets the virtual box
    in a state inconsitent with what qemu expects.
    - debian/patches/04_no_pcibios_init.patch: New file.
    (Closes: #281862, #283166, #284132, #285752)

 -- Guillem Jover <guillem@debian.org>  Tue, 11 Jan 2005 18:36:23 +0100

bochs (2.1.1+20041109-2) unstable; urgency=high

  * Build-Depends and use gcc-3.4 on m68k to avoid an ICE. (Closes: #284050)
  * Fix build failure with gcc-4.0. (Closes: #284748)
    Thanks to Andreas Jochens <aj@andaco.de>.
  * Add missing "--tag CXX" in libtool invokations.
  * Remove possible RPATH in SDL plugin.
  * Fix typo in documentation. (Partial fix: #198766)
  * Fix broken links to Home in bochs-doc manuals. (Closes: #198861)
  * Update bochsrc(5) with new vgaromimage syntax, and fix warnings in all
    manpages. (Closes: #274336)
