@@ -37,6 +37,7 @@ conf_args = \
 	\
 	--enable-cdrom \
 	--enable-vbe \
+	--enable-pci \
 	\
 	--enable-cpu-level=5 \
 	--enable-fpu \
@@ -55,7 +56,7 @@ cdrom = cdrom
 
 ifeq ($(DEB_HOST_ARCH_OS),linux)
   kernel = linux
-  conf_args += --enable-ne2000
+  conf_args += --enable-ne2000 --enable-pnic
   eth = eth0
   sb16 = linux
   com = ttyS0
@@ -65,7 +66,7 @@ endif
 endif
 ifeq ($(DEB_HOST_ARCH_OS),kfreebsd)
   kernel = fbsd
-  conf_args += --enable-ne2000
+  conf_args += --enable-ne2000 --enable-pnic
   eth = xl0
   sb16 = freebsd
   com = cuua0
