@@ -10,6 +10,7 @@ bochs (2.2-1) UNRELEASED; urgency=low
     Thanks to Rodrigo Tadeu Claro <rlinux@cipsga.org.br>.
   * Added Vietnamese debconf translation. (Closes: #313170)
     Thanks to Clytie Siddall <clytie@riverland.net.au>.
+  * Enable the pseudo NIC interface to be used with EtherBoot.
   * Provide a symlinked manpage for bochs-bin.
   * Add a man page for sb16ctrl.
   * Explicitly state architectures and stop using type-handling.
